delete migrate, delete walls, delete the pair that was doing it twice
Three removals, and the redundancy was real in every case.

preparer and prepare-critic did what before-pins does: apply this hop's version
floors. The difference was that before-pins ends on check_pins, a read of the
build files, and the preparer ended on a critic reading a diff. Two mechanisms
for one job, and the one without the verification was the older one. The
preparer's genuinely non-version work moves into before-pins as two named
steps -- the --add-opens for test libraries that reflect into the process
environment, and maven.compiler.proc=full at target 23 and above.

walls was a table of known error signatures applied reactively during the gate
loop, and its rows are now pins. Lombok, byte-buddy, mockito, archunit and
kotlin were in both places; the rest -- the JEP 320 replacements, hamcrest, the
junit platform launcher, the compiler plugin -- are pins in the lists now, which
also means they are applied BEFORE the first failing build rather than after it.
That is a gate turn saved on every project that needs them.

migrate ran the recipe program and then the floors. The floors are the pin
phases. The recipes move into the bumper, which is where they belong: the
bumper's job is to move the project to the target, and it now runs
UpgradeBuildToJavaN and the rest through apply_recipe, then reads check_target
and raises by hand whatever the recipes did not reach.

That last one also removes a green box that was never quite honest. migrate was
drawn as deterministic, and mostly was, but bootLine() inspected the project to
choose the Spring recipe -- judgement, in a step described as code, and wrong on
six of 102 workspaces until this morning.

Twenty agents in ten pairs. Two deterministic steps left, the baseline and the
gate, and they are the two that decide anything: what must be conserved, and
whether it was.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>